Fix input overflow

--- a/css/style.css
+++ b/css/style.css
@@ -81,8 +81,8 @@ a {
   display: flex;
 }
 .popup__input {
+  width: 100%;
   padding: 1.3rem 1.7rem;
-  flex-grow: 1;
   border: 1px solid var(--clr-secondary-lt);
   border-radius: .5rem;
   background-color: var(--clr-helper);
